implementação desconto